# stocky

./: README.md  pyproject.toml
stocky/: __init__.py  main.py
